--- a/common/gpioconfig/CMakeLists.txt
+++ b/common/gpioconfig/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(app_src GPIOconfig.h)
+set(app_src GPIOconfig.c)
 set(pri_req)
 idf_component_register(SRCS $(app_src)
                     INCLUDE_DIRS "."
